--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -7,7 +7,7 @@
     <script src="../css/iconfont.css" ></script>
 </head>
 <style>
-    input, ul, p, a, i, li, h1, h2, h3 {
+    body,input, ul, p, a, i, li, h1, h2, h3,header {
         list-style: none;
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
@@ -22,18 +22,30 @@
     }
 
     header {
+        position: relative;
         height: 72px;
         width: 100%;
+        padding: 9px 29px;
     }
 
     header input.search {
-        border-radius: 50%;
+        border-radius: 24px;
         border: 1px solid #ececec;
-        width: 562px;
+        width: 100%;
         height: 48px;
         line-height: 48px;
-    }
+        font-size: 17px;
+        text-indent: 26px;
+        margin: auto;
+        outline : none;
 
+    }
+    div.content{
+
+    }
+    div.content img.activity-img{
+        width: 100%;
+    }
     section.pro-list{
         display: flex;
         display: -webkit-flex; /* Safari */
@@ -52,16 +64,16 @@
         <input class="search" placeholder="商品关键字"  />
     </header>
     <div class="content">
-         <img class="activity-img" src="">
+         <img class="activity-img" src="../images/index_banner01.jpg">
         <section  class="pro-list hot-pro">
             <h3>热销产品</h3>
             <ul>
-                <li class=""></li>
-                <li class=""></li>
-                <li class=""></li>
-                <li class=""></li>
-                <li class=""></li>
-                <li class=""></li>
+                <li ></li>
+                <li ></li>
+                <li ></li>
+                <li ></li>
+                <li ></li>
+                <li ></li>
             </ul>
         </section>
         <section  class="pro-list like-pro">
