--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -68,6 +68,7 @@
     /***********收货人地址列表****************/
     ul.address-lst {
     }
+
     ul.address-lst li.one-address{
         height: 84px;
         width: 100%;
@@ -76,7 +77,14 @@
         background-color: white;
         margin-bottom: 13px;
     }
+
     ul.address-lst li p:first-child{
+        font-size: 18px;
+        margin-bottom: 23px;
+        position: relative;
+    }
+
+    ul.address-lst li p.one-address-menu{
         font-size: 18px;
         margin-bottom: 23px;
         position: relative;
@@ -85,10 +93,12 @@
     ul.address-lst li p:first-child span.choice-cnee{
         color: #ef1837;
     }
+
     ul.address-lst li p:first-child span.addr-phone{
         position: absolute;
         right: 0;
     }
+
 
     ul li.sure-btn {
         padding: 0;
@@ -159,10 +169,12 @@
                 <label>收货人地址:</label>
                 <span>广州市天河区华穗路406号保利克洛维中景大厦1305单元</span>
             </p>
+            <p class="one-address-menu">
+
+            </p>
         </li>
 <li class="one-address">
             <p>
-                <em class="choice-icon"></em>
                 <span class="choice-cnee">收货人:陈文杰</span>
                 <span class="addr-phone">13855588886</span>
             </p>
